Refactoring and adding unit test